--- a/SMS Classifier/SMS Classifier.ipynb
+++ b/SMS Classifier/SMS Classifier.ipynb
@@ -1035,11 +1035,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "__Model Ranking Based on Performance__\n",
+    "1. MultinomialNB\n",
+    "2. GaussianNB\n",
+    "3. DecisionTreeClassifier\n",
+    "4. RandomForestClassifier\n",
+    "5. Support Vector Classifier"
+   ]
   }
  ],
  "metadata": {
